2005-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/score.cc: Bugfixes for SCM header_ and texts_ members.

2005-03-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/open-type-font-scheme.cc:  new file.

2005-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/titling.scm (layout-extract-page-properties): Rename from
	page-properties.  Update callers.

	* lily/lexer.ll (Lily_lexer):
	* lily/parser.yy: Junk lyric_markup state.

	* Documentation/topdocs/NEWS.tely (Top): Mention markup text feature.

	* scripts/lilypond-book.py (PREAMBLE_LY): toplevel-music-handler:
	Add texts parameter.

2005-03-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lexer.ll (lyric_markup): New mode.
	(Lily_lexer::push_lyric_markup_state): New method.
	(MARKUPCOMMAND): Markup during lyric mode returns LYRIC_MARKUP.

	* lily/parser.yy (book_body):
	(toplevel_expression): Grok \markup texts.

	* lily/score-scheme.cc (ly:music-scorify): 
	* scm/lily-library.scm (collect-music-for-book): Take texts
	parameter.

	* lily/score.cc (texts_): New member.

	* lily/paper-book.cc (systems): Format score texts.

	* score-text.ly: New file.

	* ttftool/SConscript:
	* kpath-guile/SConscript: New file.

	* lily/SConscript:
	* SConstruct: Update.

2005-03-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.5.14

2005-03-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc: Add dummy xgettext markers.

2005-03-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.fedora.spec.in (Requires): scrap kpathsea/tex
	requirements

	* stepmake/aclocal.m4: check dynamic link, by checking if kpathsea
	executable is < 40k

	* lily/main.cc (setup_paths): remove tfm1 tfm2 tfm3 include path
	hack.

2005-03-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/libc-extension.cc:
	* flower/include/libc-extension.hh: [Open]BSD simply cast
	cookie/funopen declarations.

	* stepmake/aclocal.m4: Check for libkpathsea.so.

	* kpath-guile/kpath.c (ly_kpathsea_expand_variable): Use