@@ -1,5 +1,7 @@
 2005-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* input/regression/score-text.ly: Really add.
+
 	* lily/score.cc: Bugfixes for SCM header_ and texts_ members.
 
 2005-03-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
